--- a/ch10_homepage/src/main/webapp/WEB-INF/web.xml
+++ b/ch10_homepage/src/main/webapp/WEB-INF/web.xml
@@ -2,13 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version="6.0">
   <servlet>
     <description></description>
-    <display-name>BoardUpdateSuvlet</display-name>
-    <servlet-name>BoardUpdateSuvlet</servlet-name>
-    <servlet-class>BoardUpdateSuvlet</servlet-class>
+    <display-name>BoardPostServlet</display-name>
+    <servlet-name>BoardPostServlet</servlet-name>
+    <servlet-class>board.BoardPostServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>BoardUpdateSuvlet</servlet-name>
-    <url-pattern>/boardUpdate</url-pattern>
+    <servlet-name>BoardPostServlet</servlet-name>
+    <url-pattern>/board/boardPost</url-pattern>
   </servlet-mapping>
   <display-name>ch10_homepage</display-name>
   <welcome-file-list>
@@ -19,4 +19,24 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>BoardReplyServlet</display-name>
+    <servlet-name>BoardReplyServlet</servlet-name>
+    <servlet-class>board.BoardReplyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>BoardReplyServlet</servlet-name>
+    <url-pattern>/board/boardReply</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>BoardUpdateServlet</display-name>
+    <servlet-name>BoardUpdateServlet</servlet-name>
+    <servlet-class>board.BoardUpdateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>BoardUpdateServlet</servlet-name>
+    <url-pattern>/board/boardUpdate</url-pattern>
+  </servlet-mapping>
 </web-app>
